--- a/the_purpose/index.html
+++ b/the_purpose/index.html
@@ -5,7 +5,6 @@
  <meta name="viewport" content="width=device-width">
  <title>the purpose</title>
  <link rel = "stylesheet" href = "index.css">
- <link rel = "stylesheet" href = "index.js">
  <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
 </head>
 <body>
@@ -19,7 +18,6 @@
    <img src = "./img/side_bar.png"></img>
   </div>
   <div class = "site_map" id = "map">
-    <p>sample</p>
     <div class = "close-map">
       <p>閉じる</p>
     </div>
@@ -52,15 +50,15 @@
 
 
             <div class = "anxiety">
-              <h1><span class = "line">3つの"不安"ああああああ</span></h1>
+              <h1><span class = "line">3つの"不安"</span></h1>
               <div class = "anxieties">
-                <div class = "anxieties_contents">
+                <div class = "anxieties_contents sa rl">
                   <h2>1<span class = "anx_center">|</span>ホントにWebサイトは実益に繋がるの?</h2>
                 </div>
-                <div class = "anxieties_contents">
+                <div class = "anxieties_contents sa rl">
                   <h2>2<span class = "anx_center">|</span>重要性はわかるけど制作にかかるコストが高い</h2>
                 </div>
-                <div class = "anxieties_contents">
+                <div class = "anxieties_contents sa rl">
                   <h2>3<span class = "anx_center">|</span>サイト作成後、運用していく自信がない</h2>
                 </div>
               </div>
@@ -116,9 +114,9 @@
 
           <div class = "service">
               <h1><span class = "line">Service</span></h1>
-                <div class = "service_wrap ">
-                  <img class = "images_left" src = "./img/brand.jpg">
-                  <div class = "design_right">
+                <div class = "service_wrap">
+                  <img class = "images_left sa lr" src = "./img/brand.jpg">
+                  <div class = "design_right  sa rl">
                     <h2>ブランディング戦略</h2>
                     <p>ブランド戦略は、長期的な利益を生み出す非常に重要なキーである
                       徹底的に自社の強みを見出だし、ユーザーの心にどのように存在すればいいのか、
@@ -127,8 +125,8 @@
                   </div>
                 </div>
                 <div class = "service_wrap">
-                  <img class = "images_right" src = "./img/SEO_1.jpg">
-                 <div class = "design_left">
+                  <img class = "images_right sa rl" src = "./img/SEO_1.jpg">
+                 <div class = "design_left sa lr">
                   <h2>SEO対策</h2>
                   <p>Google及びYahoo!で検索した結果画面の上位化を行います。
                     Yahoo!の検索機能はGoogleによる検索結果順位の提供を受ますので
@@ -138,8 +136,8 @@
                  </div>
                </div>
                <div class = "service_wrap">
-                 <img class = "images_left"  src = "./img/web.jpg">
-                <div class = "design_right">
+                 <img class = "images_left sa lr"  src = "./img/web.jpg">
+                <div class = "design_right sa rl">
                   <h2>webサイト制作</h2>
                   <p>コーポレートサイト、リクルーティングサイト、キャンペーンサイト、ランディングページなどを、
                     UI/UXに配慮したクリエイティブで仕上げます。
@@ -149,8 +147,8 @@
                 </div>
               </div>
               <div class = "service_wrap">
-                <img class = "images_right" src = "./img/shinan.jpg">
-                <div class = "design_left">
+                <img class = "images_right sa rl" src = "./img/shinan.jpg">
+                <div class = "design_left sa lr">
                   <h2>コンサルティング</h2>
                   <p>ビジネスにおいて、より効率的にビジネスを進めたり、
                     長期的な戦略をともに考えたりなど、より高度なビジネスにおいて、
@@ -159,8 +157,8 @@
                 </div>
              </div>
              <div class = "service_wrap">
-               <img class = "images_left" src = "./img/konsaru.jpg">
-                <div class = "design_right">
+               <img class = "images_left sa lr" src = "./img/konsaru.jpg">
+                <div class = "design_right sa rl">
                   <h2>HP運営指南</h2>
                   <p>弊社がクライアントの事業課題に対するアプローチとして、
                     eスポーツ領域に関する競合分析・市場調査・プロダクト設計などを行いました。
