--- a/the_purpose/index.html
+++ b/the_purpose/index.html
@@ -14,14 +14,24 @@
   <div class = "menu">
     <img src = "./img/logo3.png">
   </div>
-  <div class = "side_contents map-show">
-   <img src = "./img/side_bar.png"></img>
-  </div>
-  <div class = "site_map" id = "map">
-    <div class = "close-map">
-      <p>閉じる</p>
+  <div class = "side_contents">
+    <div id="nav-drawer">
+        <input id="nav-input" type="checkbox" class="nav-unshown">
+        <label id="nav-open" for="nav-input">
+         <img src = "./img/side_bar.png">
+        </label>
+        <label class="nav-unshown" id="nav-close" for="nav-input"></label>
+        <div id="nav-content">
+          <h1>site_map</h1>
+            <div class = "">
+                <a href = "#1">anxiety</a>
+                <a href = "#2">Answer</a>
+                <a href = "#3">power</a>
+                <a href = "#4">Service</a>
+                <a href = "#5">Flow</a>
+            </div>
+        </div>
     </div>
-  </div>
 </header>
 
 
@@ -35,7 +45,7 @@
 
 
 <div class = "head">
-  <img src = "./img/sample1.jpg">
+  <img class = "temple"src = "./img/sample1.jpg">
   <!-- <div class  = "head_star">
         <h1>Web For Marketing</h1>
   </div> -->
@@ -43,13 +53,14 @@
     <h2>知らないところで<br><span class = "line">収益機会の損失や</span><br>
       <span class = "line">ブランドイメージの低下が</span><br>起こっています</h2>
   </div> -->
+  <img class = "tamtam" src = "./img/sample3.jpg">
 </div>
 
 
 <div class = "main">
 
 
-            <div class = "anxiety">
+            <div class = "anxiety" id = "1">
               <h1><span class = "line">3つの"不安"</span></h1>
               <div class = "anxieties">
                 <div class = "anxieties_contents sa rl">
@@ -66,7 +77,7 @@
 
 
 
-           <div class = "answer">
+           <div class = "answer" id = "2">
                 <h1><span class = "line">我々の考え</span></h1>
              <div class = "answer_contents">
                <img src = "./img/WP_flow.png">
@@ -80,7 +91,7 @@
 
 
 
-            <div class = "power">
+            <div class = "power" id = "3">
               <h1><span class = "line">我々の強み</span></h1>
               <div class = "power_wrap">
               　<div class = "power_contents">
@@ -112,7 +123,7 @@
 
 
 
-          <div class = "service">
+          <div class = "service" id = "4">
               <h1><span class = "line">Service</span></h1>
                 <div class = "service_wrap">
                   <img class = "images_left sa lr" src = "./img/brand.jpg">
@@ -172,7 +183,7 @@
 
 
 
-            <div class = "flow">
+            <div class = "flow" id = "5">
               <h1><span class = "line">Flow</span></h1>
               <div class = "flow_content">
                 <img src = "./img/mimi.png">
