--- a/the_purpose/index.html
+++ b/the_purpose/index.html
@@ -22,13 +22,14 @@
         </label>
         <label class="nav-unshown" id="nav-close" for="nav-input"></label>
         <div id="nav-content">
-          <h1>site_map</h1>
+          <h1>sitemap</h1>
             <div class = "">
                 <a href = "#1">anxiety</a>
                 <a href = "#2">Answer</a>
                 <a href = "#3">power</a>
                 <a href = "#4">Service</a>
                 <a href = "#5">Flow</a>
+                <a class = "contact" href="index2.html">Contact</a>
             </div>
         </div>
     </div>
@@ -45,15 +46,10 @@
 
 
 <div class = "head">
+  <div class = "head-wrap">
   <img class = "temple"src = "./img/sample1.jpg">
-  <!-- <div class  = "head_star">
-        <h1>Web For Marketing</h1>
-  </div> -->
-  <!-- <div class = "head_contents">
-    <h2>知らないところで<br><span class = "line">収益機会の損失や</span><br>
-      <span class = "line">ブランドイメージの低下が</span><br>起こっています</h2>
-  </div> -->
   <img class = "tamtam" src = "./img/sample3.jpg">
+  </div>
 </div>
 
 
@@ -61,16 +57,16 @@
 
 
             <div class = "anxiety" id = "1">
-              <h1><span class = "line">3つの"不安"</span></h1>
+              <h1><span class = "line">全て解決</span></h1>
               <div class = "anxieties">
                 <div class = "anxieties_contents sa rl">
-                  <h2>1<span class = "anx_center">|</span>ホントにWebサイトは実益に繋がるの?</h2>
+                  <h2>1<span class = "anx_center"></span>ホントにWebサイトは実益に繋がるの?</h2>
                 </div>
                 <div class = "anxieties_contents sa rl">
-                  <h2>2<span class = "anx_center">|</span>重要性はわかるけど制作にかかるコストが高い</h2>
+                  <h2>2<span class = "anx_center"></span>重要性はわかるけど制作にかかるコストが高い</h2>
                 </div>
                 <div class = "anxieties_contents sa rl">
-                  <h2>3<span class = "anx_center">|</span>サイト作成後、運用していく自信がない</h2>
+                  <h2>3<span class = "anx_center"></span>サイト作成後、運用していく自信がない</h2>
                 </div>
               </div>
             </div>
@@ -78,9 +74,12 @@
 
 
            <div class = "answer" id = "2">
-                <h1><span class = "line">我々の考え</span></h1>
+                <h1><span class = "line">解決手段</span></h1>
              <div class = "answer_contents">
                <img src = "./img/WP_flow.png">
+             </div>
+             <div class = "answer_contents">
+               <img src = "./img/saitoseisaku.jpg">
              </div>
            </div>
 
@@ -282,7 +281,6 @@
 
 
 <footer>
-  <a class = "contact" href="index2.html">コンタクトフォームへ</a>
   <img src = "./img/thepurpose.jpeg">
 </footer>
 
