--- a/the_purpose/index.html
+++ b/the_purpose/index.html
@@ -47,7 +47,7 @@
 
 <div class = "head">
   <div class = "head-wrap">
-  <img class = "temple"src = "./img/sample1.jpg">
+  <img class = "temple"src = "./img/lp_main_wrapper.jpg">
   <img class = "tamtam" src = "./img/sample3.jpg">
   </div>
 </div>
