--- a/the_purpose/index.html
+++ b/the_purpose/index.html
@@ -5,12 +5,17 @@
  <meta name="viewport" content="width=device-width">
  <title>the purpose</title>
  <link rel = "stylesheet" href = "index.css">
+<link href="https://fonts.googleapis.com/css?family=Lora:400,400i|Sawarabi+Mincho&display=swap" rel="stylesheet">
  <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
 </head>
 <body>
 
 
-<header>
+<div class = "head">
+</div>
+
+
+<header id = "fifi">
   <div class = "menu">
     <img src = "./img/logo3.png">
   </div>
@@ -24,7 +29,7 @@
         <div id="nav-content">
           <h1>sitemap</h1>
             <div class = "">
-                <a href = "#1">anxiety</a>
+                <a href = "#1">top</a>
                 <a href = "#2">Answer</a>
                 <a href = "#3">power</a>
                 <a href = "#4">Service</a>
@@ -36,52 +41,29 @@
 </header>
 
 
-
-
-
-
-<a  href = "#">
+<a href = "#">
  <div class = "scroll_top"></div>
 </a>
 
 
-<div class = "head">
-  <div class = "head-wrap">
-  <img class = "temple"src = "./img/lp_main_wrapper.jpg">
-  <img class = "tamtam" src = "./img/sample3.jpg">
-  </div>
-</div>
-
-
 <div class = "main">
-
-
-            <div class = "anxiety" id = "1">
-              <h1><span class = "line">全て解決</span></h1>
-              <div class = "anxieties">
-                <div class = "anxieties_contents sa rl">
-                  <h2>1<span class = "anx_center"></span>ホントにWebサイトは実益に繋がるの?</h2>
-                </div>
-                <div class = "anxieties_contents sa rl">
-                  <h2>2<span class = "anx_center"></span>重要性はわかるけど制作にかかるコストが高い</h2>
-                </div>
-                <div class = "anxieties_contents sa rl">
-                  <h2>3<span class = "anx_center"></span>サイト作成後、運用していく自信がない</h2>
-                </div>
-              </div>
-            </div>
+    <div class = "top" id = "1">
+      <div class = "top-main">
+        <h1>第２の店舗を<br><span class = "margin-left"></span>創りませんか？</h1>
+      </div>
+      <div class = "top-sub">
+      <h2>私たちは、あなたの会社の<span class = "blue">"目的"</span>
+        のために  共に尽力致します。</h2>
+      </div>
+      <div class = "top-kaisha">
+        <h2>web制作会社    the  purpose</h2>
+      </div>
+    </div>
 
 
 
-           <div class = "answer" id = "2">
-                <h1><span class = "line">解決手段</span></h1>
-             <div class = "answer_contents">
-               <img src = "./img/WP_flow.png">
-             </div>
-             <div class = "answer_contents">
-               <img src = "./img/saitoseisaku.jpg">
-             </div>
-           </div>
+    <div class = "answer" id = "2">
+    </div>
 
 
 
@@ -90,193 +72,27 @@
 
 
 
-            <div class = "power" id = "3">
-              <h1><span class = "line">我々の強み</span></h1>
-              <div class = "power_wrap">
-              　<div class = "power_contents">
-                   <h2><span class = "line">総合提案</span></h2>
-<img src = "./img/sougouteian.png">
-                </div>
-                <div class = "power_contents">
-                   <h2><span class = "line">充実サポート</span></h2>
-<img src = "./img/jyuzitu.png">
-                </div>
-              </div>
-              <div class = "power_wrap">
-                <div class = "power_contents">
-                  <h2><span class = "line">速さ</span></h2>
-                  <p>弊社のサービスの強みの一つである対応力。
-                    原稿確定から最短10営業日でご納品が可能でございます。
-                    ウェブデザイン制作、コーディング作業、お問い合わせフォームなどのシステム設置
-                    も完全にお任せでスピード納品いたします！
-                    ※制作内容によっては、それ以上の作業期間をいただく場合もございます。</p>
-                </div>
-                <div class = "power_contents">
-                  <h2><span class = "line">低価格</span></h2>
-<img src = "./img/content_price.png">
-                  <p>弊社のサービスは全てヒアリングからスタートします。</p>
-                </div>
-              </div>
-            </div>
+    <div class = "power" id = "3">
+    </div>
 
 
-
-
-          <div class = "service" id = "4">
-              <h1><span class = "line">Service</span></h1>
-                <div class = "service_wrap">
-                  <img class = "images_left sa lr" src = "./img/brand.jpg">
-                  <div class = "design_right  sa rl">
-                    <h2>ブランディング戦略</h2>
-                    <p>ブランド戦略は、長期的な利益を生み出す非常に重要なキーである
-                      徹底的に自社の強みを見出だし、ユーザーの心にどのように存在すればいいのか、
-                      どのように訴求すればそれを実現できるのか、そうした「ブランド戦略」を考え抜き、
-                      投資できる企業は長期的に利益を出し続けています。</p>
-                  </div>
-                </div>
-                <div class = "service_wrap">
-                  <img class = "images_right sa rl" src = "./img/SEO_1.jpg">
-                 <div class = "design_left sa lr">
-                  <h2>SEO対策</h2>
-                  <p>Google及びYahoo!で検索した結果画面の上位化を行います。
-                    Yahoo!の検索機能はGoogleによる検索結果順位の提供を受ますので
-                    Googleに対するSEO対策を行うことで、両方のSEO対策を行うことができます。
-                    サイト内のHTMLタグ構造やサイト内部のリンク構造を、弊社独自のノウハウに従って
-                    Google検索で上位化しやすい内容に最適化します。</p>
-                 </div>
-               </div>
-               <div class = "service_wrap">
-                 <img class = "images_left sa lr"  src = "./img/web.jpg">
-                <div class = "design_right sa rl">
-                  <h2>webサイト制作</h2>
-                  <p>コーポレートサイト、リクルーティングサイト、キャンペーンサイト、ランディングページなどを、
-                    UI/UXに配慮したクリエイティブで仕上げます。
-                  クライアント及び、ターゲット・ユーザーを理解するためのリサーチ・分析から、
-                  本質的なインサイト調査を行います。インサイト調査に基づくストラテジー・クリエイティブ・コンテンツの設計は、
-                  より深く意味のあるデジタルコミュニケーションを実現します。</p>
-                </div>
-              </div>
-              <div class = "service_wrap">
-                <img class = "images_right sa rl" src = "./img/shinan.jpg">
-                <div class = "design_left sa lr">
-                  <h2>コンサルティング</h2>
-                  <p>ビジネスにおいて、より効率的にビジネスを進めたり、
-                    長期的な戦略をともに考えたりなど、より高度なビジネスにおいて、
-                    そのアドバイスが重要性を増します。取引先に、定期的なレポートを提出したり、
-                    戦略などの提案書を作ったりなど、主に戦略や事業拡大におけるアドバイスや資料作成を行います。</p>
-                </div>
-             </div>
-             <div class = "service_wrap">
-               <img class = "images_left sa lr" src = "./img/konsaru.jpg">
-                <div class = "design_right sa rl">
-                  <h2>HP運営指南</h2>
-                  <p>弊社がクライアントの事業課題に対するアプローチとして、
-                    eスポーツ領域に関する競合分析・市場調査・プロダクト設計などを行いました。
-                    技術的な課題に関しては、海外チームで画面、音声の録画に関する研究（R&D）を実施し、
-                    開発中流の実装も弊社海外チームを活用しました。</p>
-                </div>
-             </div>
-          </div>
+    <div class = "flow" id = "5">
+    </div>
 
 
 
 
 
-            <div class = "flow" id = "5">
-              <h1><span class = "line">Flow</span></h1>
-              <div class = "flow_content">
-                <img src = "./img/mimi.png">
-                 <div class = "flow_contents">
-                    <div class = "message">
-                      <h2>ヒアリング</h2>
-                      <p>目的・課題・ペルソナ設定</p>
-                    </div>
-                 </div>
-              </div>
-              <div class = "flow_content">
-                <img src = "./img/youken.png">
-                 <div class = "flow_contents">
-                    <div class = "message">
-                      <h2>要件定義</h2>
-                      <p>ページ構成、コンセプト定量化</p>
-                    </div>
-                 </div>
-              </div>
-              <div class = "flow_content">
-                <img src = "./img/sekkei.png">
-                 <div class = "flow_contents">
-                    <div class = "message">
-                      <h2>構造化・デザイン設計</h2>
-                      <p>コーディングの為のワイヤーフレーム設計</p>
-                    </div>
-                 </div>
-              </div>
-              <div class = "flow_content">
-                <img src = "./img/ko_dhing.png">
-                 <div class = "flow_contents">
-                    <div class = "message">
-                      <h2>コーディング</h2>
-                      <p>実際にデザインを実装していく</p>
-                    </div>
-                 </div>
-              </div>
-              <div class = "flow_content wordpress">
-                <img src = "./img/CMS.png">
-                 <div class = "flow_contents">
-                    <div class = "message">
-                      <h2>CMS化</h2>
-                      <p>運用する為、WordPressへ落とし込む</p>
-                    </div>
-                 </div>
-              </div>
-              <div class = "flow_content">
-                <img src = "./img/check.png">
-                 <div class = "flow_contents">
-                    <div class = "message">
-                      <h2>検収</h2>
-                      <p>デザインを含め確認していただく</p>
-                    </div>
-                 </div>
-              </div>
-              <div class = "flow_content">
-                <img src = "./img/takuhai.png">
-                 <div class = "flow_contents">
-                    <div class = "message">
-                      <h2>納品</h2>
-                      <p>仕様書と一緒に納品</p>
-                    </div>
-                 </div>
-              </div>
-              <div class = "flow_content">
-                <img src = "./img/sensei.png">
-                 <div class = "flow_contents">
-                    <div class = "message">
-                      <h2>運営指南</h2>
-                      <p>CMS運用をSEOの観点から指南</p>
-                    </div>
-                 </div>
-              </div>
-            </div>
+    <div class = "price">
+    </div>
 
 
 
 
 
-            <div class = "price">
-                <img src  = "./img/price.jpg">
-            </div>
+    <div class = "about_us">
 
-
-
-
-
-            <div class = "about_us">
-                  <h1>会社概要</h1><a href = "https://thepurpose-inc.com/">詳細はこちら</a>
-                  <h2>弊社はweb制作を通じてクライアント様に利益を届けます</h2>
-                  <h2>弊社はweb制作業務だけでなくweb制作スキルをチェックする<br>
-                <span class = "line">テスティングプラットフォーム事業も展開しております。</span></h2>
-            </div>
-
+    </div>
 </div>
 
 
