--- a/the_purpose/index.html
+++ b/the_purpose/index.html
@@ -30,11 +30,11 @@
           <h1>sitemap</h1>
             <div class = "">
                 <a href = "#1">top</a>
-                <a href = "#2">Answer</a>
-                <a href = "#3">power</a>
-                <a href = "#4">Service</a>
+                <a href = "#2">question</a>
+                <a href = "#3">merit</a>
+                <a href = "#4">plan</a>
                 <a href = "#5">Flow</a>
-                <a class = "contact" href="index2.html">Contact</a>
+                <a href = "#6">Contact</a>
             </div>
         </div>
     </div>
@@ -46,7 +46,6 @@
 </a>
 
 
-<div class = "main">
     <div class = "top" id = "1">
       <div class = "top-main">
         <h1>第２の店舗を<br><span class = "margin-left"></span>創りませんか？</h1>
@@ -61,8 +60,18 @@
     </div>
 
 
-
-    <div class = "answer" id = "2">
+<div class = "main">
+    <div class = "question" id = "2">
+      <div class = "question-main">
+        <h1>今やwebサイトのもつ力は強大になり</h1>
+        <h1><span class = "margin-left" >ホームページが企業のイメージ・売りげを大きく左右する時代</span></h1>
+      </div>
+      <div class = "question-sub">
+        <h2>こんな経験ありませんか？</h2>
+        <h3>・もっと会社を広く知ってもらいたい</h3>
+        <h3>・人材採用がうまくいかない</h3>
+        <h3>・より多くの新規顧客を獲得したい</h3>
+      </div>
     </div>
 
 
@@ -72,27 +81,169 @@
 
 
 
-    <div class = "power" id = "3">
+    <div class = "merit" id = "3">
+      <h1>webサイトを作るとこんなメリットがあります！</h1>
+        <div class = "merit-contents ll">
+          <h2>"ホームページが会社を宣伝してくれる"</h2>
+          <p>webサイトは非常に優秀な情報発信ツールであり、<br>
+          世の中に会社の全てを発信することができます</p>
+        </div>
+        <div class = "merit-contents rr">
+          <h2>"ビジネスチャンスの獲得に繋がる"</h2>
+          <p>しっかりとペルソナ・ゴールが設定されたwebサイトにはビジネスビジネスチャンス
+          獲得が大いに見込めます</p>
+        </div>
+        <div class = "merit-contents ll">
+          <h2>"今や人材確保もホームページから"</h2>
+          <p>採用活動は大手求人ポータルサイトが主流ですが、
+          ホームページからの人材採用の強みは「コストがかからず」
+          「自社に興味を持った人材を確保できる」点にあります</p>
+        </div>
     </div>
+
+
+    <div class = "marketprice">
+      <h1>でも"webサイト制作=高価格"のイメージがありませんか？<br>
+      一般的な相場は以下の通りです。</h1>
+      <img src = "">
+      <h2>納品後のサポートがなかったり<br>
+      web制作からwebマーケティングまで一元化できなかったり...</h2>
+    </div>
+
+
+
+
+
+    <div class = "plan" id = "4">
+      <h1>目的に沿った３つのプラン</h1>
+        <div class = "plans">
+          <ul class = "plan-contents rrnone">
+            <li class = "bborder">A  シンプルプラン</li>
+            <li class = "bborder">¥80,000-</li>
+            <li class = "bborder">1週間前後</li>
+            <li>〜4ページ</li>
+            <li>社名検索ヒット</li>
+            <li>WordPress化</li>
+          </ul>
+          <ul class = "plan-contents">
+            <li class = "bborder">B  ベーシックプラン</li>
+            <li class = "bborder">¥400,000-</li>
+            <li class = "bborder">1〜2週間</li>
+            <li>〜10ページ</li>
+            <li>社名検索ヒット</li>
+            <li>WordPress化</li>
+            <li>商品名検索ヒット</li>
+            <li>無料アフターフォロー</li>
+          </ul>
+          <ul class = "plan-contents llnone">
+            <li class = "bborder">C  パーフェクトプラン</li>
+            <li class = "bborder">¥800,000-</li>
+            <li class = "bborder">2〜4週間</li>
+            <li>〜20ページ</li>
+            <li>社名検索ヒット</li>
+            <li>WordPress化</li>
+            <li>商品名検索ヒット</li>
+            <li>無料アフターフォロー</li>
+            <li>webマーケティング</li>
+            <li>コンサルティング</li>
+            <li>関連ワード検索ヒット</li>
+          </ul>
+        </div>
+    </div>
+
+
+
 
 
     <div class = "flow" id = "5">
+      <h1>プランごとのフロー例</h1>
+      <div class = "flows">
+        <table class = "flows-table">
+          <tr>
+            <th class = "bbottom">ヒヤリング</th>
+            <td class = "bbottom">sample</td>
+          </tr><br>
+          <tr>
+            <th class = "bbottom">マーケ戦略</th>
+            <td class = "bbottom">sample</td>
+          </tr><br>
+          <tr>
+            <th class = "bbottom">デザイン設計</th>
+            <td class = "bbottom">sample</td>
+          </tr>
+          <tr>
+            <th class = "bbottom">コーディング</th>
+            <td class = "bbottom">sample</td>
+          </tr>
+          <tr>
+            <th class = "bbottom">SEO対策</th>
+            <td class = "bbottom">sample</td>
+          </tr>
+          <tr>
+            <th class = "bbottom">WordPress化</th>
+            <td class = "bbottom">sample</td>
+          </tr>
+          <tr>
+            <th class = "bbottom">検収</th>
+            <td class = "bbottom">sample</td>
+          </tr>
+          <tr>
+            <th class = "bbottom">納品</th>
+            <td class = "bbottom">sample</td>
+          </tr>
+          <tr>
+            <th>アフターフォロー</th>
+            <td>sample</td>
+          </tr>
+        </table>
+      </div>
     </div>
 
 
 
+   <div class = "contact" id = "6">
+     <h1>お問い合わせ・お申し込み</h1>
+     <h2>些細なご相談からでもお気軽にお問い合わせください</h2>
+     <form class = "contacts" action="index.php" method="post">
+        <table class = "contacts-table">
+          <tr>
+            <th>※名前</th>
+            <td><input type="text" name="name" size="50" value="" /></td>
+          </tr>
+          <tr>
+            <th>※TEL</th>
+            <td><input type="text" name="tel" size="50" value="" /><td>
+          </tr>
+          <tr>
+            <th>※メールアドレス</th>
+            <td><input type="text" name="mail" size="50" value="" /><td>
+          </tr>
+          <tr>
+            <th>※会社名</th>
+            <td><input type="text" name="company" size="50" value="" /><td>
+          </tr>
+          <tr>
+            <th>※題名</th>
+            <td>
+      　　　　　<SELECT name="section" class = "section">
+                <OPTION SELECTED>項目をチェックしてください
+                <OPTION VALUE="over90">A シンプルプランのお申し込み
+                <OPTION VALUE="80-89">B ベーシックプランのお申し込み
+                <OPTION VALUE="70-79">C パーフェクトプランのお申し込み
+                <OPTION VALUE="60-69">ご相談・ご質問
+                <OPTION VALUE="50-59">その他
+              </SELECT>
+            </td>
+          </tr>
+          <tr>
+            <th>※お問い合わせ内容</th>
+            <td><textarea name="inquiry" cols="50" rows="5"></textarea></td>
+          </tr>
+        </table>
+        <input class = "last" type="submit" value="送信" />
+      </form>
+   </div>
 
-
-    <div class = "price">
-    </div>
-
-
-
-
-
-    <div class = "about_us">
-
-    </div>
 </div>
 
 
