--- a/the_purpose/index.html
+++ b/the_purpose/index.html
@@ -5,7 +5,7 @@
  <meta name="viewport" content="width=device-width">
  <title>the purpose</title>
  <link rel = "stylesheet" href = "index.css">
-<link href="https://fonts.googleapis.com/css?family=Lora:400,400i|Sawarabi+Mincho&display=swap" rel="stylesheet">
+ <link href="https://fonts.googleapis.com/css?family=Lora:400,400i|Sawarabi+Mincho&display=swap" rel="stylesheet">
  <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
 </head>
 <body>
@@ -163,7 +163,7 @@
             <th class = "bbottom">ヒヤリング</th>
             <td class = "bbottom">sample</td>
           </tr><br>
-          <tr>
+          <tr class = "bg-red">
             <th class = "bbottom">マーケ戦略</th>
             <td class = "bbottom">sample</td>
           </tr><br>
@@ -175,7 +175,7 @@
             <th class = "bbottom">コーディング</th>
             <td class = "bbottom">sample</td>
           </tr>
-          <tr>
+          <tr class = "bg-white">
             <th class = "bbottom">SEO対策</th>
             <td class = "bbottom">sample</td>
           </tr>
@@ -191,12 +191,14 @@
             <th class = "bbottom">納品</th>
             <td class = "bbottom">sample</td>
           </tr>
-          <tr>
+          <tr class = "bg-white">
             <th>アフターフォロー</th>
             <td>sample</td>
           </tr>
         </table>
       </div>
+      <p><span class = "color-blue">青色の工程</span>はプランCにのみ追加されます</p>
+      <p><span class = "color-yellow">黄色の工程</span>はプランB・Cにのみ追加されます</p>
     </div>
 
 
