--- a/the_purpose/index.html
+++ b/the_purpose/index.html
@@ -47,8 +47,13 @@
 
 
     <div class = "top" id = "1">
+      <div class = "scroll" id = "rect">
+        <a href = "#2">
+        <img src = "./img/scroll.png">
+        </a>
+      </div>
       <div class = "top-main">
-        <h1>第２の店舗を<br><span class = "margin-left"></span>創りませんか？</h1>
+        <h1 id = "typing">第２の店舗を創りませんか？</h1>
       </div>
       <div class = "top-sub">
       <h2>私たちは、あなたの会社の<span class = "blue">"目的"</span>
@@ -61,6 +66,7 @@
 
 
 <div class = "main">
+
     <div class = "question" id = "2">
       <div class = "question-main">
         <h1>今やwebサイトのもつ力は強大になり</h1>
@@ -123,32 +129,32 @@
             <li class = "bborder">A  シンプルプラン</li>
             <li class = "bborder">¥80,000-</li>
             <li class = "bborder">1週間前後</li>
-            <li>〜4ページ</li>
-            <li>社名検索ヒット</li>
-            <li>WordPress化</li>
+            <li class = "lili">〜4ページ</li>
+            <li class = "lili">社名検索ヒット</li>
+            <li class = "lili">WordPress化</li>
           </ul>
           <ul class = "plan-contents">
             <li class = "bborder">B  ベーシックプラン</li>
             <li class = "bborder">¥400,000-</li>
             <li class = "bborder">1〜2週間</li>
-            <li>〜10ページ</li>
-            <li>社名検索ヒット</li>
-            <li>WordPress化</li>
-            <li>商品名検索ヒット</li>
-            <li>無料アフターフォロー</li>
+            <li class = "lili">〜10ページ</li>
+            <li class = "lili">社名検索ヒット</li>
+            <li class = "lili">WordPress化</li>
+            <li class = "lili">商品名検索ヒット</li>
+            <li class = "lili">無料アフターフォロー</li>
           </ul>
           <ul class = "plan-contents llnone">
             <li class = "bborder">C  パーフェクトプラン</li>
             <li class = "bborder">¥800,000-</li>
             <li class = "bborder">2〜4週間</li>
-            <li>〜20ページ</li>
-            <li>社名検索ヒット</li>
-            <li>WordPress化</li>
-            <li>商品名検索ヒット</li>
-            <li>無料アフターフォロー</li>
-            <li>webマーケティング</li>
-            <li>コンサルティング</li>
-            <li>関連ワード検索ヒット</li>
+            <li class = "lili">〜20ページ</li>
+            <li class = "lili">社名検索ヒット</li>
+            <li class = "lili">WordPress化</li>
+            <li class = "lili">商品名検索ヒット</li>
+            <li class = "lili">無料アフターフォロー</li>
+            <li class = "lili">webマーケティング</li>
+            <li class = "lili">コンサルティング</li>
+            <li class = "lili">関連ワード検索ヒット</li>
           </ul>
         </div>
     </div>
@@ -248,13 +254,57 @@
       </form>
    </div>
 
+
+
+   <!-- <div class = "contact-iphone" id = "6">
+     <h1>お問い合わせ・お申し込み</h1>
+     <h2>些細なご相談からでもお気軽にお問い合わせください</h2>
+     <form class = "contacts" action="index.php" method="post">
+        <table class = "contacts-table">
+          <tr>
+            <th>※名前</th>
+            <td><input type="text" name="name" size="50" value="" /></td>
+          </tr>
+          <tr>
+            <th>※TEL</th><br>
+            <td><input type="text" name="tel" size="50" value="" /><td>
+          </tr>
+          <tr>
+            <th>※メールアドレス</th><br>
+            <td><input type="text" name="mail" size="50" value="" /><td>
+          </tr>
+          <tr>
+            <th>※会社名</th><br>
+            <td><input type="text" name="company" size="50" value="" /><td>
+          </tr>
+          <tr>
+            <th>※題名</th><br>
+            <td>
+      　　　　　<SELECT name="section" class = "section">
+                <OPTION SELECTED>項目をチェックしてください
+                <OPTION VALUE="over90">A シンプルプランのお申し込み
+                <OPTION VALUE="80-89">B ベーシックプランのお申し込み
+                <OPTION VALUE="70-79">C パーフェクトプランのお申し込み
+                <OPTION VALUE="60-69">ご相談・ご質問
+                <OPTION VALUE="50-59">その他
+              </SELECT>
+            </td>
+          </tr>
+          <tr>
+            <th>※お問い合わせ内容</th><br>
+            <td><textarea name="inquiry" cols="50" rows="5"></textarea></td>
+          </tr>
+        </table>
+        <input class = "last" type="submit" value="送信" />
+      </form>
+   </div> -->
+
 </div>
 
 
 <footer>
   <img src = "./img/thepurpose.jpeg">
 </footer>
-
 <script src = "index.js"></script>
 </body>
 </html>
