--- a/the_purpose/index.html
+++ b/the_purpose/index.html
@@ -53,7 +53,8 @@
         </a>
       </div>
       <div class = "top-main">
-        <h1 id = "typing">第２の店舗を創りませんか？</h1>
+        <h1 id = "typing">第２の店舗を</h1>
+        <h1 class = "margin-left" id = "following">創りませんか？</h1>
       </div>
       <div class = "top-sub">
       <h2>私たちは、あなたの会社の<span class = "blue">"目的"</span>
@@ -72,14 +73,13 @@
         <h1>今やwebサイトのもつ力は強大になり</h1>
         <h1><span class = "margin-left" >ホームページが企業のイメージ・売りげを大きく左右する時代</span></h1>
       </div>
-      <div class = "question-sub">
         <h2>こんな経験ありませんか？</h2>
-        <h3>・もっと会社を広く知ってもらいたい</h3>
-        <h3>・人材採用がうまくいかない</h3>
-        <h3>・より多くの新規顧客を獲得したい</h3>
+      <div class = "question-sub">
+        <h3>もっと会社を広く知ってもらいたい</h3>
+        <h3>人材採用がうまくいかない</h3>
+        <h3>より多くの新規顧客を獲得したい</h3>
       </div>
     </div>
-
 
 
 
@@ -90,17 +90,20 @@
     <div class = "merit" id = "3">
       <h1>webサイトを作るとこんなメリットがあります！</h1>
         <div class = "merit-contents ll">
-          <h2>"ホームページが会社を宣伝してくれる"</h2>
+          <img src = "./img/merit-1.png">
+          <h2><span class = "border-bar">"ホームページが会社を宣伝してくれる"</span></h2>
           <p>webサイトは非常に優秀な情報発信ツールであり、<br>
           世の中に会社の全てを発信することができます</p>
         </div>
         <div class = "merit-contents rr">
-          <h2>"ビジネスチャンスの獲得に繋がる"</h2>
+          <img src = "./img/merit-2.png">
+          <h2><span class = "border-bar">"ビジネスチャンスの獲得に繋がる"</span></h2>
           <p>しっかりとペルソナ・ゴールが設定されたwebサイトにはビジネスビジネスチャンス
           獲得が大いに見込めます</p>
         </div>
         <div class = "merit-contents ll">
-          <h2>"今や人材確保もホームページから"</h2>
+          <img src = "./img/merit-3.png">
+          <h2><span class = "border-bar">"今や人材確保もホームページから"</span></h2>
           <p>採用活動は大手求人ポータルサイトが主流ですが、
           ホームページからの人材採用の強みは「コストがかからず」
           「自社に興味を持った人材を確保できる」点にあります</p>
@@ -109,13 +112,15 @@
 
 
     <div class = "marketprice">
-      <h1>でも"webサイト制作=高価格"のイメージがありませんか？<br>
+      <h1>でも<span class = "border-bar">"webサイト制作=高価格"</span>
+        のイメージがありませんか？<br>
       一般的な相場は以下の通りです。</h1>
       <div class = "sannkou">
         <img src = "./img/sannkou.png">
       </div>
-      <h2>納品後のサポートがなかったり<br>
-      web制作からwebマーケティングまで一元化できなかったり...</h2>
+      <h2 class = "big">なおかつ</h2>
+      <h2 class = "margin-left bigger">納品後のサポートがなかったり</h2>
+      <h2 class = "margin-left bigger">web制作からwebマーケティングまで一元化できなかったり...</h2>
     </div>
 
 
@@ -164,49 +169,71 @@
 
 
     <div class = "flow" id = "5">
-      <h1>プランごとのフロー例</h1>
+      <h1>プランごとのフロー例</h1><br>
       <div class = "flows">
         <table class = "flows-table">
           <tr>
+            <th class = "bbottom">プラン名</th>
+            <td class = "bbottom">A</td>
+            <td class = "bbottom">B</td>
+            <td class = "bbottom">C</td>
+          </tr>
+          <tr>
             <th class = "bbottom">ヒヤリング</th>
-            <td class = "bbottom">sample</td>
-          </tr><br>
-          <tr class = "bg-red">
+            <td class = "bbottom">○</td>
+            <td class = "bbottom">○</td>
+            <td class = "bbottom">○</td>
+          </tr>
+          <tr>
             <th class = "bbottom">マーケ戦略</th>
-            <td class = "bbottom">sample</td>
-          </tr><br>
+            <td class = "bbottom">-</td>
+            <td class = "bbottom">-</td>
+            <td class = "bbottom">○</td>
+          </tr>
           <tr>
             <th class = "bbottom">デザイン設計</th>
-            <td class = "bbottom">sample</td>
+            <td class = "bbottom">○</td>
+            <td class = "bbottom">○</td>
+            <td class = "bbottom">○</td>
           </tr>
           <tr>
             <th class = "bbottom">コーディング</th>
-            <td class = "bbottom">sample</td>
+            <td class = "bbottom">○</td>
+            <td class = "bbottom">○</td>
+            <td class = "bbottom">○</td>
           </tr>
-          <tr class = "bg-white">
+          <tr>
             <th class = "bbottom">SEO対策</th>
-            <td class = "bbottom">sample</td>
+            <td class = "bbottom">-</td>
+            <td class = "bbottom">○</td>
+            <td class = "bbottom">○</td>
           </tr>
           <tr>
             <th class = "bbottom">WordPress化</th>
-            <td class = "bbottom">sample</td>
+            <td class = "bbottom">○</td>
+            <td class = "bbottom">○</td>
+            <td class = "bbottom">○</td>
           </tr>
           <tr>
             <th class = "bbottom">検収</th>
-            <td class = "bbottom">sample</td>
+            <td class = "bbottom">○</td>
+            <td class = "bbottom">○</td>
+            <td class = "bbottom">○</td>
           </tr>
           <tr>
             <th class = "bbottom">納品</th>
-            <td class = "bbottom">sample</td>
+            <td class = "bbottom">-</td>
+            <td class = "bbottom">○</td>
+            <td class = "bbottom">○</td>
           </tr>
-          <tr class = "bg-white">
+          <tr>
             <th>アフターフォロー</th>
-            <td>sample</td>
+            <td>○</td>
+            <td>○</td>
+            <td>○</td>
           </tr>
         </table>
       </div>
-      <p><span class = "color-blue">青色の工程</span>はプランCにのみ追加されます</p>
-      <p><span class = "color-yellow">黄色の工程</span>はプランB・Cにのみ追加されます</p>
     </div>
 
 
