--- a/the_purpose/index.html
+++ b/the_purpose/index.html
@@ -47,6 +47,8 @@
 
 
     <div class = "top" id = "1">
+      <div class = "kakkoii">
+      </div>
       <div class = "scroll" id = "rect">
         <a href = "#2">
         <img src = "./img/scroll.png">
