--- a/the_purpose/index.html
+++ b/the_purpose/index.html
@@ -23,7 +23,11 @@
     <div id="nav-drawer">
         <input id="nav-input" type="checkbox" class="nav-unshown">
         <label id="nav-open" for="nav-input">
-         <img src = "./img/side_bar.png">
+            <div class = "side-bar">
+             <span></span>
+             <span></span>
+             <span></span>
+           </div>
         </label>
         <label class="nav-unshown" id="nav-close" for="nav-input"></label>
         <div id="nav-content">
@@ -54,9 +58,8 @@
         <img src = "./img/scroll.png">
         </a>
       </div>
-      <div class = "top-main">
-        <h1 id = "typing">第２の店舗を</h1>
-        <h1 class = "margin-left" id = "following">創りませんか？</h1>
+        <h1 class = "top-main" id = "typing">第２の店舗を
+  創りませんか？</h1>
       </div>
       <div class = "top-sub">
       <h2>私たちは、あなたの会社の<span class = "blue">"目的"</span>
@@ -73,7 +76,7 @@
     <div class = "question" id = "2">
       <div class = "question-main">
         <h1>今やwebサイトのもつ力は強大になり</h1>
-        <h1><span class = "margin-left" >ホームページが企業のイメージ・売りげを大きく左右する時代</span></h1>
+        <h1><span class = "margin-left" >ホームページが企業のイメージ・売り上げを大きく左右する時代</span></h1>
       </div>
         <h2>こんな経験ありませんか？</h2>
       <div class = "question-sub">
@@ -90,22 +93,23 @@
 
 
     <div class = "merit" id = "3">
+       <img class = "contents-img" src = "./img/merit.png">
       <h1>webサイトを作るとこんなメリットがあります！</h1>
         <div class = "merit-contents ll">
           <img src = "./img/merit-1.png">
-          <h2><span class = "border-bar">"ホームページが会社を宣伝してくれる"</span></h2>
+          <h2><span class = "marker-line">"ホームページが会社を宣伝してくれる"</span></h2>
           <p>webサイトは非常に優秀な情報発信ツールであり、<br>
           世の中に会社の全てを発信することができます</p>
         </div>
         <div class = "merit-contents rr">
           <img src = "./img/merit-2.png">
-          <h2><span class = "border-bar">"ビジネスチャンスの獲得に繋がる"</span></h2>
+          <h2><span class = "marker-line">"ビジネスチャンスの獲得に繋がる"</span></h2>
           <p>しっかりとペルソナ・ゴールが設定されたwebサイトにはビジネスビジネスチャンス
           獲得が大いに見込めます</p>
         </div>
         <div class = "merit-contents ll">
           <img src = "./img/merit-3.png">
-          <h2><span class = "border-bar">"今や人材確保もホームページから"</span></h2>
+          <h2><span class = "marker-line">"今や人材確保もホームページから"</span></h2>
           <p>採用活動は大手求人ポータルサイトが主流ですが、
           ホームページからの人材採用の強みは「コストがかからず」
           「自社に興味を持った人材を確保できる」点にあります</p>
@@ -114,7 +118,7 @@
 
 
     <div class = "marketprice">
-      <h1>でも<span class = "border-bar">"webサイト制作=高価格"</span>
+      <h1>でも<span class = "marker-line">"webサイト制作=高価格"</span>
         のイメージがありませんか？<br>
       一般的な相場は以下の通りです。</h1>
       <div class = "sannkou">
@@ -130,6 +134,7 @@
 
 
     <div class = "plan" id = "4">
+      <img class = "contents-img" src = "./img/plan.png">
       <h1>目的に沿った３つのプラン</h1>
         <div class = "plans">
           <ul class = "plan-contents rrnone">
@@ -171,6 +176,7 @@
 
 
     <div class = "flow" id = "5">
+      <img class = "contents-img" src = "./img/flow.png">
       <h1>プランごとのフロー例</h1><br>
       <div class = "flows">
         <table class = "flows-table">
@@ -181,7 +187,7 @@
             <td class = "bbottom">C</td>
           </tr>
           <tr>
-            <th class = "bbottom">ヒヤリング</th>
+            <th class = "bbottom">ヒアリング</th>
             <td class = "bbottom">○</td>
             <td class = "bbottom">○</td>
             <td class = "bbottom">○</td>
@@ -241,6 +247,7 @@
 
 
    <div class = "contact" id = "6">
+     <img class = "contents-img" src = "./img/contact.png">
      <h1>お問い合わせ・お申し込み</h1>
      <h2>些細なご相談からでもお気軽にお問い合わせください</h2>
      <form class = "contacts" action="index.php" method="post">
