--- a/the_purpose/index.html
+++ b/the_purpose/index.html
@@ -51,8 +51,7 @@
 
 
     <div class = "top" id = "1">
-      <div class = "kakkoii">
-      </div>
+      <img class = "logo delay" src = "./img/logo1.png">
       <div class = "scroll" id = "rect">
         <a href = "#2">
         <img src = "./img/scroll.png">
@@ -65,7 +64,7 @@
       <h2>私たちは、あなたの会社の<span class = "blue">"目的"</span>
         のために  共に尽力致します。</h2>
       </div>
-      <div class = "top-kaisha">
+      <div class = "top-kaisha delay">
         <h2>web制作会社    the  purpose</h2>
       </div>
     </div>
@@ -74,11 +73,12 @@
 <div class = "main">
 
     <div class = "question" id = "2">
-      <div class = "question-main">
+      <div class = "question-main rara">
         <h1>今やwebサイトのもつ力は強大になり</h1>
         <h1><span class = "margin-left" >ホームページが企業のイメージ・売り上げを大きく左右する時代</span></h1>
       </div>
-        <h2>こんな経験ありませんか？</h2>
+        <h2 class = "papa">こんな経験ありませんか？</h2>
+        <img src = "./img/keiken.png">
       <div class = "question-sub">
         <h3>もっと会社を広く知ってもらいたい</h3>
         <h3>人材採用がうまくいかない</h3>
@@ -93,23 +93,23 @@
 
 
     <div class = "merit" id = "3">
-       <img class = "contents-img" src = "./img/merit.png">
+       <img class = "contents-img sa up" src = "./img/merit.png">
       <h1>webサイトを作るとこんなメリットがあります！</h1>
-        <div class = "merit-contents ll">
-          <img src = "./img/merit-1.png">
-          <h2><span class = "marker-line">"ホームページが会社を宣伝してくれる"</span></h2>
+        <div class = "merit-contents rara ll">
+          <img src = "./img/merit1.png">
+          <h2 class = "saikou"><span class = "marker-line">"ホームページが会社を宣伝してくれる"</span></h2>
           <p>webサイトは非常に優秀な情報発信ツールであり、<br>
           世の中に会社の全てを発信することができます</p>
         </div>
-        <div class = "merit-contents rr">
-          <img src = "./img/merit-2.png">
-          <h2><span class = "marker-line">"ビジネスチャンスの獲得に繋がる"</span></h2>
+        <div class = "merit-contents rara rr">
+          <img src = "./img/merit2.png">
+          <h2 class = "saikou"><span class = "marker-line">"ビジネスチャンスの獲得に繋がる"</span></h2>
           <p>しっかりとペルソナ・ゴールが設定されたwebサイトにはビジネスビジネスチャンス
           獲得が大いに見込めます</p>
         </div>
-        <div class = "merit-contents ll">
-          <img src = "./img/merit-3.png">
-          <h2><span class = "marker-line">"今や人材確保もホームページから"</span></h2>
+        <div class = "merit-contents rara ll">
+          <img src = "./img/merit3.png">
+          <h2 class = "saikou"><span class = "marker-line">"今や人材確保もホームページから"</span></h2>
           <p>採用活動は大手求人ポータルサイトが主流ですが、
           ホームページからの人材採用の強みは「コストがかからず」
           「自社に興味を持った人材を確保できる」点にあります</p>
@@ -134,7 +134,7 @@
 
 
     <div class = "plan" id = "4">
-      <img class = "contents-img" src = "./img/plan.png">
+      <img class = "contents-img sa up" src = "./img/plan.png">
       <h1>目的に沿った３つのプラン</h1>
         <div class = "plans">
           <ul class = "plan-contents rrnone">
@@ -145,7 +145,7 @@
             <li class = "lili">社名検索ヒット</li>
             <li class = "lili">WordPress化</li>
           </ul>
-          <ul class = "plan-contents">
+          <ul class = "plan-contents backc_a">
             <li class = "bborder">B  ベーシックプラン</li>
             <li class = "bborder">¥400,000-</li>
             <li class = "bborder">1〜2週間</li>
@@ -155,7 +155,7 @@
             <li class = "lili">商品名検索ヒット</li>
             <li class = "lili">無料アフターフォロー</li>
           </ul>
-          <ul class = "plan-contents llnone">
+          <ul class = "plan-contents llnone backc_b">
             <li class = "bborder">C  パーフェクトプラン</li>
             <li class = "bborder">¥800,000-</li>
             <li class = "bborder">2〜4週間</li>
@@ -176,69 +176,69 @@
 
 
     <div class = "flow" id = "5">
-      <img class = "contents-img" src = "./img/flow.png">
+      <img class = "contents-img sa up" src = "./img/flow.png">
       <h1>プランごとのフロー例</h1><br>
       <div class = "flows">
         <table class = "flows-table">
           <tr>
             <th class = "bbottom">プラン名</th>
             <td class = "bbottom">A</td>
-            <td class = "bbottom">B</td>
-            <td class = "bbottom">C</td>
+            <td class = "bbottom backc_a">B</td>
+            <td class = "bbottom backc_b">C</td>
           </tr>
           <tr>
             <th class = "bbottom">ヒアリング</th>
             <td class = "bbottom">○</td>
-            <td class = "bbottom">○</td>
-            <td class = "bbottom">○</td>
+            <td class = "bbottom backc_a">○</td>
+            <td class = "bbottom backc_b">○</td>
           </tr>
           <tr>
             <th class = "bbottom">マーケ戦略</th>
             <td class = "bbottom">-</td>
-            <td class = "bbottom">-</td>
-            <td class = "bbottom">○</td>
+            <td class = "bbottom backc_a">-</td>
+            <td class = "bbottom backc_b">○</td>
           </tr>
           <tr>
             <th class = "bbottom">デザイン設計</th>
             <td class = "bbottom">○</td>
-            <td class = "bbottom">○</td>
-            <td class = "bbottom">○</td>
+            <td class = "bbottom backc_a">○</td>
+            <td class = "bbottom backc_b">○</td>
           </tr>
           <tr>
             <th class = "bbottom">コーディング</th>
             <td class = "bbottom">○</td>
-            <td class = "bbottom">○</td>
-            <td class = "bbottom">○</td>
+            <td class = "bbottom backc_a">○</td>
+            <td class = "bbottom backc_b">○</td>
           </tr>
           <tr>
             <th class = "bbottom">SEO対策</th>
             <td class = "bbottom">-</td>
-            <td class = "bbottom">○</td>
-            <td class = "bbottom">○</td>
+            <td class = "bbottom backc_a">○</td>
+            <td class = "bbottom backc_b">○</td>
           </tr>
           <tr>
             <th class = "bbottom">WordPress化</th>
             <td class = "bbottom">○</td>
-            <td class = "bbottom">○</td>
-            <td class = "bbottom">○</td>
+            <td class = "bbottom backc_a">○</td>
+            <td class = "bbottom backc_b">○</td>
           </tr>
           <tr>
             <th class = "bbottom">検収</th>
             <td class = "bbottom">○</td>
-            <td class = "bbottom">○</td>
-            <td class = "bbottom">○</td>
+            <td class = "bbottom backc_a">○</td>
+            <td class = "bbottom backc_b">○</td>
           </tr>
           <tr>
             <th class = "bbottom">納品</th>
             <td class = "bbottom">-</td>
-            <td class = "bbottom">○</td>
-            <td class = "bbottom">○</td>
+            <td class = "bbottom backc_a">○</td>
+            <td class = "bbottom backc_b">○</td>
           </tr>
           <tr>
             <th>アフターフォロー</th>
             <td>○</td>
-            <td>○</td>
-            <td>○</td>
+            <td class = "backc_a">○</td>
+            <td class = "backc_b">○</td>
           </tr>
         </table>
       </div>
@@ -247,29 +247,29 @@
 
 
    <div class = "contact" id = "6">
-     <img class = "contents-img" src = "./img/contact.png">
+     <img class = "contents-img  sa up" src = "./img/contact.png">
      <h1>お問い合わせ・お申し込み</h1>
      <h2>些細なご相談からでもお気軽にお問い合わせください</h2>
      <form class = "contacts" action="index.php" method="post">
         <table class = "contacts-table">
           <tr>
-            <th>※名前</th>
+            <th>名前</th>
             <td><input type="text" name="name" size="50" value="" /></td>
           </tr>
           <tr>
-            <th>※TEL</th>
+            <th>TEL</th>
             <td><input type="text" name="tel" size="50" value="" /><td>
           </tr>
           <tr>
-            <th>※メールアドレス</th>
+            <th>メールアドレス</th>
             <td><input type="text" name="mail" size="50" value="" /><td>
           </tr>
           <tr>
-            <th>※会社名</th>
+            <th>会社名</th>
             <td><input type="text" name="company" size="50" value="" /><td>
           </tr>
           <tr>
-            <th>※題名</th>
+            <th>題名</th>
             <td>
       　　　　　<SELECT name="section" class = "section">
                 <OPTION SELECTED>項目をチェックしてください
@@ -282,7 +282,7 @@
             </td>
           </tr>
           <tr>
-            <th>※お問い合わせ内容</th>
+            <th>お問い合わせ内容</th>
             <td><textarea name="inquiry" cols="50" rows="5"></textarea></td>
           </tr>
         </table>
