--- a/the_purpose/index.html
+++ b/the_purpose/index.html
@@ -73,9 +73,9 @@
 <div class = "main">
 
     <div class = "question" id = "2">
-      <div class = "question-main rara">
+      <div class = "question-main">
         <h1>今やwebサイトのもつ力は強大になり</h1>
-        <h1><span class = "margin-left" >ホームページが企業のイメージ・売り上げを大きく左右する時代</span></h1>
+        <h1><span class = "margin-left1" >ホームページが企業のイメージ・売り上げを大きく左右する時代</span></h1>
       </div>
         <h2 class = "papa">こんな経験ありませんか？</h2>
         <img src = "./img/keiken.png">
@@ -97,19 +97,19 @@
       <h1>webサイトを作るとこんなメリットがあります！</h1>
         <div class = "merit-contents rara ll">
           <img src = "./img/merit1.png">
-          <h2 class = "saikou"><span class = "marker-line">"ホームページが会社を宣伝してくれる"</span></h2>
+          <h2 class = "saikou"><span class = "">"ホームページが会社を宣伝してくれる"</span></h2>
           <p>webサイトは非常に優秀な情報発信ツールであり、<br>
           世の中に会社の全てを発信することができます</p>
         </div>
         <div class = "merit-contents rara rr">
           <img src = "./img/merit2.png">
-          <h2 class = "saikou"><span class = "marker-line">"ビジネスチャンスの獲得に繋がる"</span></h2>
+          <h2 class = "saikou"><span class = "">"ビジネスチャンスの獲得に繋がる"</span></h2>
           <p>しっかりとペルソナ・ゴールが設定されたwebサイトにはビジネスビジネスチャンス
           獲得が大いに見込めます</p>
         </div>
         <div class = "merit-contents rara ll">
           <img src = "./img/merit3.png">
-          <h2 class = "saikou"><span class = "marker-line">"今や人材確保もホームページから"</span></h2>
+          <h2 class = "saikou"><span class = "">"今や人材確保もホームページから"</span></h2>
           <p>採用活動は大手求人ポータルサイトが主流ですが、
           ホームページからの人材採用の強みは「コストがかからず」
           「自社に興味を持った人材を確保できる」点にあります</p>
@@ -125,8 +125,8 @@
         <img src = "./img/sannkou.png">
       </div>
       <h2 class = "big">なおかつ</h2>
-      <h2 class = "margin-left bigger">納品後のサポートがなかったり</h2>
-      <h2 class = "margin-left bigger">web制作からwebマーケティングまで一元化できなかったり...</h2>
+      <h2 class = "margin-left2 bigger">納品後のサポートがなかったり</h2>
+      <h2 class = "margin-left2 bigger">web制作からwebマーケティングまで一元化できなかったり...</h2>
     </div>
 
 
@@ -292,29 +292,30 @@
 
 
 
-   <!-- <div class = "contact-iphone" id = "6">
+   <div class = "contact-iphone" id = "6">
+    <img class = "contents-img  sa up" src = "./img/contact.png">
      <h1>お問い合わせ・お申し込み</h1>
      <h2>些細なご相談からでもお気軽にお問い合わせください</h2>
      <form class = "contacts" action="index.php" method="post">
         <table class = "contacts-table">
           <tr>
-            <th>※名前</th>
-            <td><input type="text" name="name" size="50" value="" /></td>
+            <th>名前</th>
+            <td><input type="text" name="name" size="30" value="" /></td>
           </tr>
           <tr>
-            <th>※TEL</th><br>
-            <td><input type="text" name="tel" size="50" value="" /><td>
+            <th>TEL</th>
+            <td><input type="text" name="tel" size="30" value="" /><td>
           </tr>
           <tr>
-            <th>※メールアドレス</th><br>
-            <td><input type="text" name="mail" size="50" value="" /><td>
+            <th>メールアドレス</th>
+            <td><input type="text" name="mail" size="30" value="" /><td>
           </tr>
           <tr>
-            <th>※会社名</th><br>
-            <td><input type="text" name="company" size="50" value="" /><td>
+            <th>会社名</th>
+            <td><input type="text" name="company" size="30" value="" /><td>
           </tr>
           <tr>
-            <th>※題名</th><br>
+            <th>題名</th>
             <td>
       　　　　　<SELECT name="section" class = "section">
                 <OPTION SELECTED>項目をチェックしてください
@@ -327,13 +328,13 @@
             </td>
           </tr>
           <tr>
-            <th>※お問い合わせ内容</th><br>
-            <td><textarea name="inquiry" cols="50" rows="5"></textarea></td>
+            <th>お問い合わせ内容</th>
+            <td><textarea name="inquiry" cols="30" rows="7"></textarea></td>
           </tr>
         </table>
         <input class = "last" type="submit" value="送信" />
       </form>
-   </div> -->
+   </div>
 
 </div>
 
